--- a/package.json
+++ b/package.json
@@ -1,19 +1,62 @@
 {
   "name": "clique-seeds",
-  "version": "1.0.0",
   "description": "A utility for creating seed data for both the server and client.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "version": "0.0.1",
+  "author": "Walker Ward <walker.ward1@gmail.com> ()",
+  "bugs": {
+    "url": "https://github.com/walkward/clique-seeds/issues",
+    "email": "walker.ward1@gmail.com"
+  },
+  "contributors": [
+    "Walker Ward <walker.ward1@gmail.com> ()"
+  ],
+  "dependencies": {
+    "chance": "1.0.16",
+    "common-tags": "1.8.0"
+  },
+  "ava": {
+    "failFast": true,
+    "verbose": true
+  },
+  "devDependencies": {
+    "ava": "^0.22.0",
+    "codecov": "^2.3.0",
+    "cross-env": "^5.0.5",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "husky": "^0.14.3",
+    "nyc": "^11.1.0"
+  },
+  "engines": {
+    "node": ">=8.3"
+  },
+  "homepage": "https://github.com/walkward/clique-seeds",
+  "keywords": [
+    "clique-seeds"
+  ],
+  "license": "MIT",
+  "main": "./src/index.js",
+  "nyc": {
+    "check-coverage": true,
+    "lines": 90,
+    "functions": 90,
+    "branches": 90,
+    "reporter": [
+      "lcov",
+      "html",
+      "text"
+    ]
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/walkward/clique-seeds.git"
+    "url": "https://github.com/walkward/clique-seeds"
   },
-  "author": "Walker Ward",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/walkward/clique-seeds/issues"
-  },
-  "homepage": "https://github.com/walkward/clique-seeds#readme"
+  "scripts": {
+    "lint": "eslint src/**",
+    "test": "yarn run lint && yarn run test-coverage",
+    "test:dev": "NODE_ENV=test ava --watch",
+    "test-coverage": "cross-env NODE_ENV=test nyc ava",
+    "coverage": "nyc report --reporter=text-lcov > coverage.lcov && codecov"
+  }
 }
