added seeds.retrieve() method

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "chance": "1.0.16",
-    "common-tags": "1.8.0"
+    "common-tags": "1.8.0",
+    "lodash": "4.17.11"
   },
   "ava": {
     "failFast": true,
